external form title change

--- a/sens_pozitiv/sens_pozitiv_site/templates/form.html
+++ b/sens_pozitiv/sens_pozitiv_site/templates/form.html
@@ -2,7 +2,7 @@
 {% load static i18n %}
 {% load crispy_forms_tags %}
 
-{% block title %}UCCH - {% trans "Patient Request Form" %}{% endblock %}
+{% block title %}{% trans "Positive Sense | Patient Request Form" %}{% endblock %}
 
 {% block content %}
 
