--- a/sens_pozitiv/sens_pozitiv_site/templates/base.html
+++ b/sens_pozitiv/sens_pozitiv_site/templates/base.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{% block title %}Ukraine Child Cancer Help{% endblock %}</title>
+    <title>{% block title %}Sens Pozitiv{% endblock %}</title>
 
     <link rel="stylesheet" href="{% static "site/css/main.css" %}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
