external form footer info

--- a/sens_pozitiv/sens_pozitiv_site/templates/base.html
+++ b/sens_pozitiv/sens_pozitiv_site/templates/base.html
@@ -41,7 +41,7 @@
         <div class="container py-12 lg:py-8 mx-auto">
             <div class="md:flex md:items-center md:justify-between">
                 <p class="mt-8 text-base text-gray-400 md:mt-0 md:order-1 px-2">
-                    © {% now "Y" %} Ukraine Child Cancer Help Romania. {% trans "A Code for Romania project." %}
+                    © {% now "Y" %} Positive Sense Romania {% trans "A Code for Romania project." %}
                 </p>
             </div>
         </div>
