--- a/sens_pozitiv/sens_pozitiv_site/templates/base.html
+++ b/sens_pozitiv/sens_pozitiv_site/templates/base.html
@@ -23,10 +23,10 @@
 
     <div class="bg-gray-100">
         <div class="container flex items-center py-3 mx-auto">
-            <img class="fill-current h-6" src="{% static "site/img/code4-logo.svg" %}" alt="">
+            <img class="fill-current h-6" src="{% static "site/img/commitglobal.svg" %}" alt="">
 
             <div class="ml-6 text-sm font-medium text-gray-700">
-                <span>{% trans "A Code for Romania project." %}</span>
+                <span>{% trans "A Commit Global project." %}</span>
                 <a href="https://www.code4.ro/" target="_blank" rel="noopener"
                     class="text-blue-600 hover:underline whitespace-nowrap">{% trans "Find out more" %}</a>
             </div>
@@ -41,7 +41,7 @@
         <div class="container py-12 lg:py-8 mx-auto">
             <div class="md:flex md:items-center md:justify-between">
                 <p class="mt-8 text-base text-gray-400 md:mt-0 md:order-1 px-2">
-                    © {% now "Y" %} {% trans " Positive Sense Romania. A Code for Romania project." %}
+                    © {% now "Y" %} {% trans " Positive Sense Romania. A Commit Global project." %}
                 </p>
             </div>
         </div>
