Apply suggestions from code review

--- a/sens_pozitiv/sens_pozitiv_site/templates/base.html
+++ b/sens_pozitiv/sens_pozitiv_site/templates/base.html
@@ -27,7 +27,7 @@
 
             <div class="ml-6 text-sm font-medium text-gray-700">
                 <span>{% trans "A Commit Global project." %}</span>
-                <a href="https://www.code4.ro/" target="_blank" rel="noopener"
+                <a href="https://www.commitglobal.org/" target="_blank" rel="noopener"
                     class="text-blue-600 hover:underline whitespace-nowrap">{% trans "Find out more" %}</a>
             </div>
         </div>
